Integrated gradle min version and versions.properties